# alex-0d18-tank-arena

./: .env.example  .gitignore  .plan  .prettierignore  README.md  package-lock.json  package.json  playwright.config.ts
backend/: Cargo.toml
backend/src/: auth.rs  auth_middleware.rs  config.rs  db.rs  email.rs  lib.rs  main.rs  match_results.rs  match_sessions.rs  matchmaking.rs  mission_progress.rs  protocol.rs  routes.rs  state.rs  storage.rs
backend/src/users/: mod.rs  model.rs  password.rs  repository.rs  reset.rs
deploy/: README.md  env.production.example
deploy/nginx/: alex-0d18-tank-arena.conf.example
deploy/systemd/: alex-0d18-tank-arena.service.example
docs/: database-schema.md
frontend/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/auth/: AuthProvider.tsx  context.ts  types.ts  useAuth.ts
frontend/src/components/: ScenePreview.tsx
frontend/src/multiplayer/: MultiplayerDuelPanel.tsx
frontend/src/terrain/: AiOpponentController.tsx  CameraRig.tsx  CombatHud.tsx  MissionPanel.tsx  MissionScreens.tsx  ProjectileSystem.tsx  Silhouette.tsx  TankMovementController.tsx  TerrainRenderer.tsx  aiBehavior.ts  (+10 more)
migrations/: 20260714231500_create_core_schema.sql  20260714233500_add_user_password_hash.sql  20260714235500_create_password_reset_tokens.sql  20260715015500_create_match_results.sql
scripts/: deploy-build.sh  deploy-run.sh
shared/: README.md  protocol.ts
tests/e2e/: multiplayer-duel-flow.spec.ts  solo-mission-flow.spec.ts
